[package]
name = "swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1" }

[dev-dependencies]
mollusk-svm = "=0.10.3"
mollusk-svm-programs-token = "=0.10.3"
solana-account = "=3.2.0"
solana-instruction = "=3.0.0"
solana-program-error = "=3.0.0"
solana-program-pack = "=3.0.0"
solana-pubkey = "=4.0.0"
solana-rent = "=3.0.0"
solana-sdk-ids = "=3.0.0"
spl-associated-token-account-interface = "=2.0.0"
spl-token-interface = "=2.0.0"

[[bench]]
name = "compute_units"
harness = false


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
